perbaikan addData dan editData

--- a/views/addData.ejs
+++ b/views/addData.ejs
@@ -29,7 +29,7 @@
                 <input type="number" id="price" class="form-control" min="0" required>
             </div>
             <div class="d-flex justify-content-between">
-                <button type="submit" id="addData" class="btn btn-primary">Tambah Item</button>
+                <button type="submit" id="addData" class="btn btn-primary">Tambah Kamar</button>
                 <button type="button" id="batal" class="btn btn-secondary" onclick="history.back()">Kembali</button>
             </div>
         </form>
