--- a/views/editData.ejs
+++ b/views/editData.ejs
@@ -13,7 +13,7 @@
 
 <body class="bg-light">
     <div class="container mt-5">
-        <h1 id="judul" class="text-primary text-center mb-4">Edit Item</h1>
+        <h1 id="judul" class="text-primary text-center mb-4">Edit Data Kamar</h1>
 
 
         <form class="border p-4 bg-white shadow rounded">
